correccion menu page

--- a/secciones/menu.html
+++ b/secciones/menu.html
@@ -37,7 +37,7 @@
                     <div class="box">
                         <img class="img-menu" src="../img/FS-Easy-Franzbrotchen-German-Cinnamon-Rolls-2.jpeg" alt="brownnie">
                         <h3 class="titulo-menu">Roll</h3>
-                        <p class="texto-menu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias minima repudiandae labore consequuntur similique, error inventore.</h2> 
+                        <p class="texto-menu">No mucho por explicar, rollo de masa y canela, sutilmente endulzado y pintado con almibar casero.</h2> 
                     </div>
                     <div class="box">
                         <img class="img-menu" src="../img/depositphotos_84738192-stock-photo-christmas-stollen.jpg" alt="brownnie">
