--- a/secciones/menu.html
+++ b/secciones/menu.html
@@ -42,7 +42,7 @@
                     <div class="box">
                         <img class="img-menu" src="../img/depositphotos_84738192-stock-photo-christmas-stollen.jpg" alt="brownnie">
                         <h3 class="titulo-menu">Stollen</h3>
-                        <p class="texto-menu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias minima repudiandae labore consequuntur similique, error inventore.</h2>    
+                        <p class="texto-menu">Más manteca que harina? Ok.. Poca azucar adentro y mucha afuera? Ok.. Rellenos por el interior? OK.. Stollen.</h2>    
                     </div>
                     
             </section>
